<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <LinearLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center_horizontal"
  		android:paddingTop="20px" 
    	android:paddingBottom="10px">
  		<TextView 
        	android:text="@string/searchTip"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceMedium">
        </TextView>
  	</LinearLayout>
  
    <LinearLayout 
    	android:orientation="horizontal"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center_horizontal"
  		android:paddingTop="10px" 
    	android:paddingBottom="10px">
  		<TextView 
        	android:text="@string/startClass" 
        	android:id="@+id/textView1" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:layout_weight="1.0">
        </TextView>
        
        <Spinner 
        	android:layout_weight="2.0"
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content"
        	android:id="@+id/spin_startIndex">
        </Spinner>
  </LinearLayout>
  <!-- For start class and end class input -->
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent"
    	android:paddingTop="10px" 
    	android:paddingBottom="10px">
        
        <TextView 
        	android:text="@string/endClass" 
        	android:id="@+id/textView2" 
        	android:layout_weight="1"
        	android:layout_gravity="center_horizontal"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </TextView>
        
        <Spinner 
        	android:layout_weight="2" 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:id="@+id/spin_endIndex">
        </Spinner>
    </LinearLayout>
    
    <!-- For start class and end class input -->
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent"
    	android:paddingTop="10px" 
    	android:paddingBottom="10px">
        
        <TextView 
        	android:text="@string/whichDay" 
        	android:id="@+id/textView2" 
        	android:layout_weight="1"
        	android:layout_gravity="center_horizontal"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </TextView>
        
        <Spinner 
        	android:layout_weight="2" 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:id="@+id/spin_day">
        </Spinner>
    </LinearLayout>
    
    <!-- For building input -->
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:paddingTop="10px" 
    	android:paddingBottom="10px"
    	android:layout_gravity="center_horizontal"
    	android:id="@+id/linearLayout2">
    	
        <TextView 
        	android:text="@string/building" 
        	android:id="@+id/textView3" 
        	android:textStyle="bold"
        	android:layout_gravity="right"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1.0">
        </TextView>
        
        <Spinner 
        	android:layout_weight="2.0" 
        	android:layout_gravity="center_horizontal"
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:id="@+id/spin_building">
        </Spinner>
    </LinearLayout>
   
    
    <!-- Submit button -->
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:paddingTop="10px" 
    	android:paddingBottom="10px">
    	
        <Button 
        	android:layout_gravity="center_horizontal"
        	android:text="@string/search" 
        	android:id="@+id/btn_search"
        	android:layout_weight="1.0"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </Button>
        
        <Button 
        	android:layout_gravity="center_horizontal"
        	android:text="@string/searchBuildingOnly" 
        	android:id="@+id/btn_searchBuildingOnly"
        	android:layout_weight="1.0"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    
</LinearLayout>
